# nonogram

./: .gitignore  Board.gd  Board.tscn  Cargo.toml  Global.gd  Global.tscn  Main.gd  Main.tscn  Makefile  Maze.gd  Menu.gd  Menu.tscn  README.md  Utils.gd  export_presets.cfg  go.mod  go.sum  main.go  project.godot  settings.go
nonogram/: board.go  cell.go  game.go
src/: audio.rs  error.rs  fonts.rs  game.rs  lib.rs  main_menu.rs  stage.rs  ui.rs
src/game/: board.rs  cell.rs
src/ui/: fonts.rs  gameplay.rs  lib.rs  main_menu.rs  pause.rs  resources.rs  scene.rs  stage.rs
src/ui/scene/: gameplay.rs  main_menu.rs  pause.rs  scene.rs  state.rs
src/ui/stage/: gameplay.rs  main_menu.rs  stage.rs  state.rs
tests/: board_test.go  cell_test.go  game_test.go
ui/: gameplay.go  help_page.go  main_menu.go  resize.go  resolution.go  scene.go  ui.go  victory.go
