[package]
name        = "nonogram"
version     = "0.1.2"
edition     = "2021"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/nonogram"
repository  = "https://github.com/cacilhas/nonogram"
keywords    = ["game", "raylib"]
description = "A random nonogram game."

[profile.release]
opt-level     = "s"
codegen-units = 1
debug = false
lto   = true
rpath = false
strip = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
fastrand = "1.9"
static_init = "1.0"
thiserror = "1.0"
walkdir = "2.3"

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22"

[dependencies.raylib]
version = "4.5"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"

[[bin]]
name = "nonogram"
