[package]
name        = "kodumaro-nonogram"
version     = "3.0.1"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://crates.io/crates/kodumaro-nonogram"
repository  = "https://github.com/cacilhas/nonogram"
keywords    = ["raylib"]
categories  = ["Games"]
description = "A random nonogram game."
edition     = "2021"

[profile.release]
opt-level     = "s"
codegen-units = 1
debug = false
lto   = true
rpath = false
strip = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
fastrand = "1.9"
resolution = "0.1"
rscenes = "1.2"
static_init = "1.0"
thiserror = "1.0"
walkdir = "2.3"

[[bin]]
name = "nonogram"
path = "src/bin/nonogram.rs"
